--- a/.config
+++ b/.config
@@ -5572,12 +5572,12 @@ CONFIG_PACKAGE_ip-full=y
 # SSH
 #
 # CONFIG_PACKAGE_autossh is not set
-CONFIG_PACKAGE_openssh-client=y
+#CONFIG_PACKAGE_openssh-client=y
 # CONFIG_PACKAGE_openssh-client-utils is not set
-CONFIG_PACKAGE_openssh-keygen=y
+#CONFIG_PACKAGE_openssh-keygen=y
 # CONFIG_PACKAGE_openssh-moduli is not set
-CONFIG_PACKAGE_openssh-server=y
-CONFIG_OPENSSH_LIBFIDO2=y
+#CONFIG_PACKAGE_openssh-server=y
+#CONFIG_OPENSSH_LIBFIDO2=y
 # CONFIG_PACKAGE_openssh-server-pam is not set
 # CONFIG_PACKAGE_openssh-sftp-avahi-service is not set
 # CONFIG_PACKAGE_openssh-sftp-client is not set
