--- a/x86.config
+++ b/x86.config
@@ -6670,7 +6670,7 @@ CONFIG_PACKAGE_vlmcsd=y
 # CONFIG_PACKAGE_vti is not set
 # CONFIG_PACKAGE_vxlan is not set
 # CONFIG_PACKAGE_wakeonlan is not set
-CONFIG_PACKAGE_wg-installer-client=y
+# CONFIG_PACKAGE_wg-installer-client=y
 CONFIG_PACKAGE_wg-installer-server=y
 # CONFIG_PACKAGE_wg-installer-server-hotplug-babeld is not set
 # CONFIG_PACKAGE_wifi-presence is not set
