--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -166,7 +166,7 @@ jobs:
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
-        files: openwrt/bin/targets/*/*
+        files: openwrt/bin/targets/*/*/*
 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
