--- a/.config
+++ b/.config
@@ -7269,4 +7269,4 @@ CONFIG_STRACE_NONE=y
 # end of Font-Utils
 # end of Xorg
 
-CONFIG_OVERRIDE_PKGS="gn luci-app-passwall2"
+# CONFIG_OVERRIDE_PKGS="gn luci-app-passwall2"
